unpackaged/main/default/objects/pse__Resource_Skill_Request__c/fields/pse__Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>pse__Is_Primary__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Is this the primary skill / certification for the request?</inlineHelpText>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>