unpackaged/main/default/objects/pse__Resource_Skill_Request__c/fields/pse__Match_All__c.field-meta.xml
<CustomField>
    <fullName>pse__Match_All__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Match all or match any preference.</description>
    <label>Match All</label>
    <type>Checkbox</type>
</CustomField>