unpackaged/main/default/objects/pse__Resource_Skill_Request__c/fields/pse__Minimum_Rating__c.field-meta.xml
<CustomField>
    <fullName>pse__Minimum_Rating__c</fullName>
    <label>Minimum Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Limited Exposure</fullName>
            </value>
            <value>
                <fullName>2 - Some Familiarity</fullName>
            </value>
            <value>
                <fullName>3 - Comfortable</fullName>
            </value>
            <value>
                <fullName>4 - Strong</fullName>
            </value>
            <value>
                <fullName>5 - Expert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>