unpackaged/main/default/objects/pse__Resource_Skill_Request__c/fields/pse__Skill_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>pse__Skill_Record_Type__c</fullName>
    <description>The record type of the associated skill.</description>
    <formula>pse__Skill_Certification__r.RecordType.Name</formula>
    <inlineHelpText>The record type of the associated skill.</inlineHelpText>
    <label>Skill Record Type</label>
    <type>Text</type>
</CustomField>