unpackaged/main/default/objects/pse__Resource_Skill_Request__c/validationRules/pse__Resource_Request_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Resource_Request_Required</fullName>
    <active>true</active>
    <errorConditionFormula>LEN( pse__Resource_Request__c ) = 0</errorConditionFormula>
    <errorDisplayField>pse__Resource_Request__c</errorDisplayField>
    <errorMessage>Resource request is required</errorMessage>
</ValidationRule>